Updated Column name to above_100
Adjust it to what the question asked for.

--- a/Section_1/Dataeng_Section_1.ipynb
+++ b/Section_1/Dataeng_Section_1.ipynb
@@ -53,7 +53,7 @@
    "outputs": [],
    "source": [
     "# Define the filepath location\n",
-    "path = r'/Users/Ayden Koh/Documents/GitHub/dataeng_test_Ayden/Section_1/'\n",
+    "path = r'/Users/Ayden Koh/Documents/GitHub/dataeng_test_Ayden/Section_1/Original_Data'\n",
     "\n",
     "# Join CSVs with function\n",
     "combine_df = combine_csv(path)"
@@ -159,7 +159,7 @@
     "combine_df[['first_name','last_name']] = combine_df['name'].apply(split_name)\n",
     "\n",
     "# Create col to indicate price is above or below 100\n",
-    "combine_df['100<'] = combine_df['price'].apply(pricecheck)"
+    "combine_df['above_100'] = combine_df['price'].apply(pricecheck)"
    ]
   },
   {
@@ -192,7 +192,7 @@
        "      <th>price</th>\n",
        "      <th>first_name</th>\n",
        "      <th>last_name</th>\n",
-       "      <th>100&lt;</th>\n",
+       "      <th>above_100</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -241,12 +241,12 @@
        "</div>"
       ],
       "text/plain": [
-       "             name       price first_name last_name  100<\n",
-       "0   William Dixon  109.037280    William     Dixon  True\n",
-       "1    Kristen Horn  262.524652    Kristen      Horn  True\n",
-       "2  Kimberly Chang  187.007258   Kimberly     Chang  True\n",
-       "3       Mary Ball  283.174648       Mary      Ball  True\n",
-       "4  Benjamin Craig  143.871582   Benjamin     Craig  True"
+       "             name       price first_name last_name  above_100\n",
+       "0   William Dixon  109.037280    William     Dixon       True\n",
+       "1    Kristen Horn  262.524652    Kristen      Horn       True\n",
+       "2  Kimberly Chang  187.007258   Kimberly     Chang       True\n",
+       "3       Mary Ball  283.174648       Mary      Ball       True\n",
+       "4  Benjamin Craig  143.871582   Benjamin     Craig       True"
       ]
      },
      "execution_count": 6,
