--- a/Section_1/Dataeng_Section_1.ipynb
+++ b/Section_1/Dataeng_Section_1.ipynb
@@ -117,17 +117,107 @@
        "      <td>Benjamin Craig</td>\n",
        "      <td>143.872</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cathy Werner</td>\n",
+       "      <td>61.509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Brandon Bell</td>\n",
+       "      <td>48.6373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Paul Farley</td>\n",
+       "      <td>12.3895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sarah Mcdaniel</td>\n",
+       "      <td>151.595</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Caroline Anderson</td>\n",
+       "      <td>75.6215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Carl Jones</td>\n",
+       "      <td>147.029</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Scott Lee</td>\n",
+       "      <td>244.186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Kaylee Coleman</td>\n",
+       "      <td>17.8643</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Charles Parker</td>\n",
+       "      <td>215.537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Susan Hess</td>\n",
+       "      <td>38.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Kiara Collier</td>\n",
+       "      <td>204.183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Mr. Scott Martinez</td>\n",
+       "      <td>165.851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Christopher Ortega</td>\n",
+       "      <td>30.3014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Michael Russell</td>\n",
+       "      <td>243.172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Dwayne Johnson</td>\n",
+       "      <td>287.493</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             name    price\n",
-       "0   William Dixon  109.037\n",
-       "1    Kristen Horn  262.525\n",
-       "2  Kimberly Chang  187.007\n",
-       "3       Mary Ball  283.175\n",
-       "4  Benjamin Craig  143.872"
+       "                  name    price\n",
+       "0        William Dixon  109.037\n",
+       "1         Kristen Horn  262.525\n",
+       "2       Kimberly Chang  187.007\n",
+       "3            Mary Ball  283.175\n",
+       "4       Benjamin Craig  143.872\n",
+       "5         Cathy Werner   61.509\n",
+       "6         Brandon Bell  48.6373\n",
+       "7          Paul Farley  12.3895\n",
+       "8       Sarah Mcdaniel  151.595\n",
+       "9    Caroline Anderson  75.6215\n",
+       "10          Carl Jones  147.029\n",
+       "11           Scott Lee  244.186\n",
+       "12      Kaylee Coleman  17.8643\n",
+       "13      Charles Parker  215.537\n",
+       "14          Susan Hess    38.36\n",
+       "15       Kiara Collier  204.183\n",
+       "16  Mr. Scott Martinez  165.851\n",
+       "17  Christopher Ortega  30.3014\n",
+       "18     Michael Russell  243.172\n",
+       "19      Dwayne Johnson  287.493"
       ]
      },
      "execution_count": 4,
@@ -137,7 +227,7 @@
    ],
    "source": [
     "# Quick look at data\n",
-    "combine_df.head()"
+    "combine_df.head(20)"
    ]
   },
   {
@@ -151,6 +241,9 @@
     "\n",
     "# Ensure name col is str\n",
     "combine_df['name'] = combine_df['name'].astype(str)\n",
+    "\n",
+    "# Clean out all salutations\n",
+    "combine_df['name'] = combine_df['name'].replace(['Miss ','Mr\\. ','Ms\\. ', 'Mrs\\. ', 'Dr\\. '], '', regex=True)\n",
     "\n",
     "# Ensure price col is numeric and remove any prepended 0; which should be because number is not numeric but string\n",
     "combine_df['price'] = pd.to_numeric(combine_df[\"price\"])\n",
@@ -236,17 +329,152 @@
        "      <td>Craig</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cathy Werner</td>\n",
+       "      <td>61.508991</td>\n",
+       "      <td>Cathy</td>\n",
+       "      <td>Werner</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Brandon Bell</td>\n",
+       "      <td>48.637309</td>\n",
+       "      <td>Brandon</td>\n",
+       "      <td>Bell</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Paul Farley</td>\n",
+       "      <td>12.389465</td>\n",
+       "      <td>Paul</td>\n",
+       "      <td>Farley</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Sarah Mcdaniel</td>\n",
+       "      <td>151.595447</td>\n",
+       "      <td>Sarah</td>\n",
+       "      <td>Mcdaniel</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Caroline Anderson</td>\n",
+       "      <td>75.621521</td>\n",
+       "      <td>Caroline</td>\n",
+       "      <td>Anderson</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Carl Jones</td>\n",
+       "      <td>147.029405</td>\n",
+       "      <td>Carl</td>\n",
+       "      <td>Jones</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Scott Lee</td>\n",
+       "      <td>244.185653</td>\n",
+       "      <td>Scott</td>\n",
+       "      <td>Lee</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Kaylee Coleman</td>\n",
+       "      <td>17.864270</td>\n",
+       "      <td>Kaylee</td>\n",
+       "      <td>Coleman</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Charles Parker</td>\n",
+       "      <td>215.537283</td>\n",
+       "      <td>Charles</td>\n",
+       "      <td>Parker</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Susan Hess</td>\n",
+       "      <td>38.359971</td>\n",
+       "      <td>Susan</td>\n",
+       "      <td>Hess</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Kiara Collier</td>\n",
+       "      <td>204.182549</td>\n",
+       "      <td>Kiara</td>\n",
+       "      <td>Collier</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Scott Martinez</td>\n",
+       "      <td>165.851429</td>\n",
+       "      <td>Scott</td>\n",
+       "      <td>Martinez</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Christopher Ortega</td>\n",
+       "      <td>30.301445</td>\n",
+       "      <td>Christopher</td>\n",
+       "      <td>Ortega</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Michael Russell</td>\n",
+       "      <td>243.172491</td>\n",
+       "      <td>Michael</td>\n",
+       "      <td>Russell</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Dwayne Johnson</td>\n",
+       "      <td>287.493286</td>\n",
+       "      <td>Dwayne</td>\n",
+       "      <td>Johnson</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             name       price first_name last_name  above_100\n",
-       "0   William Dixon  109.037280    William     Dixon       True\n",
-       "1    Kristen Horn  262.524652    Kristen      Horn       True\n",
-       "2  Kimberly Chang  187.007258   Kimberly     Chang       True\n",
-       "3       Mary Ball  283.174648       Mary      Ball       True\n",
-       "4  Benjamin Craig  143.871582   Benjamin     Craig       True"
+       "                  name       price   first_name last_name  above_100\n",
+       "0        William Dixon  109.037280      William     Dixon       True\n",
+       "1         Kristen Horn  262.524652      Kristen      Horn       True\n",
+       "2       Kimberly Chang  187.007258     Kimberly     Chang       True\n",
+       "3            Mary Ball  283.174648         Mary      Ball       True\n",
+       "4       Benjamin Craig  143.871582     Benjamin     Craig       True\n",
+       "5         Cathy Werner   61.508991        Cathy    Werner      False\n",
+       "6         Brandon Bell   48.637309      Brandon      Bell      False\n",
+       "7          Paul Farley   12.389465         Paul    Farley      False\n",
+       "8       Sarah Mcdaniel  151.595447        Sarah  Mcdaniel       True\n",
+       "9    Caroline Anderson   75.621521     Caroline  Anderson      False\n",
+       "10          Carl Jones  147.029405         Carl     Jones       True\n",
+       "11           Scott Lee  244.185653        Scott       Lee       True\n",
+       "12      Kaylee Coleman   17.864270       Kaylee   Coleman      False\n",
+       "13      Charles Parker  215.537283      Charles    Parker       True\n",
+       "14          Susan Hess   38.359971        Susan      Hess      False\n",
+       "15       Kiara Collier  204.182549        Kiara   Collier       True\n",
+       "16      Scott Martinez  165.851429        Scott  Martinez       True\n",
+       "17  Christopher Ortega   30.301445  Christopher    Ortega      False\n",
+       "18     Michael Russell  243.172491      Michael   Russell       True\n",
+       "19      Dwayne Johnson  287.493286       Dwayne   Johnson       True"
       ]
      },
      "execution_count": 6,
@@ -256,8 +484,7 @@
    ],
    "source": [
     "# Quick check at dataframe\n",
-    "\n",
-    "combine_df.head()"
+    "combine_df.head(20)"
    ]
   },
   {
@@ -269,6 +496,13 @@
     "# Generating output csv\n",
     "combine_df.to_csv(\"output_dataset.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
