--- a/Section_5/Section 5 Car Price Prediction .ipynb
+++ b/Section_5/Section 5 Car Price Prediction .ipynb
@@ -1410,6 +1410,8 @@
     "# Final Summary: To answer the question...\n",
     "### By just selecting the class_value and safety feature, accuracy boosted up to 30%-32% for the classifier models\n",
     "\n",
+    "### Reason why I used safety at the end was because I tested with other parameters, it seems to give the highest accuracy\n",
+    "\n",
     "### Each model also predicted LOW price for the parameters set for the question."
    ]
   }
